implement multi-scheduling feature to a single course

--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
@@ -41,6 +41,24 @@
       .table-button {
         color: var(--primary-text);
       }
+
+      tr.has-copies {
+        background-color: var(--neutral-option);
+
+        &:not(.last-copy) {
+          td {
+            border-bottom: none;
+          }
+        }
+      }
+
+      td {
+        border-bottom: 1px solid var(--mat-table-row-item-outline-color);
+      }
+
+      tr:last-child td {
+        border-bottom: none;
+      }
     }
 
     .index {
@@ -66,6 +84,36 @@
     .custom-cell {
       padding: var(--spacing-xs);
       text-align: center;
+
+      .course-code-cell {
+        position: relative;
+      }
+
+      .course-code-wrapper {
+        @include flex-layout;
+      }
+
+      .copy-icon,
+      .remove-icon {
+        background: var(--neutral-option);
+        border-radius: var(--border-radius-base);
+        padding: var(--spacing-xxs);
+        font-size: var(--font-size-sm);
+        margin-left: var(--spacing-xs);
+        visibility: hidden;
+        opacity: var(--opacity-semi-opaque);
+        cursor: pointer;
+      }
+
+      .remove-icon {
+        background: var(--primary-fade);
+        color: var(--primary-text-lighter);
+      }
+
+      .course-code-cell:hover .copy-icon,
+      .course-code-cell:hover .remove-icon {
+        visibility: visible;
+      }
 
       .not-set-badge {
         background-color: var(--primary-fade);
