--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -45,8 +45,36 @@
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             Course Code
           </th>
-          <td mat-cell *matCellDef="let element" class="custom-cell">
-            {{ element.course_code }}
+          <td
+            mat-cell
+            *matCellDef="let element"
+            class="custom-cell course-code-cell"
+          >
+            <div class="course-code-wrapper">
+              {{ element.course_code }}
+              <!-- Add Icon for Original Courses -->
+              @if (!element.is_copy) {
+              <span
+                mat-symbol="content_copy"
+                class="copy-icon"
+                (click)="addCourseCopy(element)"
+                matTooltip="Add {{
+                  getOrdinalSuffix(getScheduleCount(element) + 1)
+                }} schedule for {{ element.course_code }}"
+              ></span>
+              }
+              <!-- Remove Icon for Copied Courses -->
+              @if (element.is_copy) {
+              <span
+                mat-symbol="do_not_disturb_on"
+                class="remove-icon"
+                (click)="removeCourseCopy(element)"
+                matTooltip="Remove {{
+                  getOrdinalSuffix(getScheduleIndex(element))
+                }} schedule for {{ element.course_code }}"
+              ></span>
+              }
+            </div>
           </td>
         </ng-container>
 
@@ -178,7 +206,12 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; columns: displayedColumns; let i = index"
+          [class.has-copies]="hasCopies(row)"
+          [class.last-copy]="isLastCopy(row, i)"
+        ></tr>
 
         <!-- No Data Row -->
         <tr *matNoDataRow>
