--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
@@ -36,6 +36,14 @@
       .table-button {
         color: var(--primary-text);
       }
+
+      td {
+        border-bottom: 1px solid var(--mat-table-row-item-outline-color);
+      }
+
+      tr:last-child td {
+        border-bottom: none;
+      }
     }
 
     .index {
