--- a/frontend/src/app/shared/table-header/table-header.component.html
+++ b/frontend/src/app/shared/table-header/table-header.component.html
@@ -30,7 +30,8 @@
         'program-field': field.key === 'program',
         'year-level-field': field.key === 'yearLevel',
         'curriculum-field': field.key === 'curriculum',
-        'sections-field': field.key === 'section'
+        'sections-field': field.key === 'section',
+        'academic-year-field': field.key === 'academicYear'
       }"
       subscriptSizing="dynamic"
     >
@@ -51,8 +52,8 @@
   </form>
 
   <!--Objects-->
+  @if (showActiveYearAndSem) {
   <div class="object-container">
-    @if (showActiveYearAndSem) {
     <div
       class="active-year-sem-container pop"
       (click)="onActiveYearSemClick()"
@@ -61,8 +62,8 @@
       <p class="text">A.Y. {{ activeYear }}, {{ activeSemester }}</p>
       <p class="label">Active Year & Semester</p>
     </div>
-    }
   </div>
+  }
 
   <!--Buttons-->
   @if (showButtons) {
