--- a/frontend/src/app/core/components/admin/overview/overview.component.html
+++ b/frontend/src/app/core/components/admin/overview/overview.component.html
@@ -1,6 +1,8 @@
 @if(isLoading) {
-<div class="loading-wrapper">
-  <app-loading></app-loading>
+<div class="overview-loading-container">
+  <div class="loading-wrapper">
+    <app-loading></app-loading>
+  </div>
 </div>
 } @else {
 <div class="overview-container">
