--- a/frontend/src/app/shared/dialog-generic/dialog-generic.component.html
+++ b/frontend/src/app/shared/dialog-generic/dialog-generic.component.html
@@ -8,7 +8,7 @@
 
     <!-- OPTIONAL: Show Progress Bar -->
     @if (data.showProgressBar) {
-    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+    <app-loading [showLoadingText]="false"></app-loading>
     }
   </div>
 
