--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -193,7 +193,8 @@ span[mat-symbol] {
 
 .loading-wrapper {
   height: 100%;
-  width: 100%;
+  width: 50%;
+  align-self: center;
 }
 
 .dialog-base {
