--- a/frontend/src/app/shared/loading/loading.component.html
+++ b/frontend/src/app/shared/loading/loading.component.html
@@ -1,5 +1,7 @@
 <div class="loading-container">
+  @if(showLoadingText) {
   <p>Loading, please wait...</p>
+  }
   <div class="custom-progress-bar">
     <div class="progress-animation primary"></div>
     <div class="progress-animation secondary"></div>
