--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -148,7 +148,7 @@
     <div id="login_misc">
       <div id="terms_text">
         <span>
-          By using this service, you understood and agree to the PUP Taguig
+          By using this service, you understand and agree to the PUP Taguig
           Faculty Loading & Scheduling System
         </span>
         <a>Terms of Use</a> and <a>Privacy Statement</a>.
