--- a/frontend/src/app/auth/login/login.component.scss
+++ b/frontend/src/app/auth/login/login.component.scss
@@ -60,7 +60,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: var(--spacing-xl);
+  gap: var(--spacing-lg);
   overflow: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -243,6 +243,10 @@
         }
       }
     }
+  }
+
+  .error-message-container {
+    border: 1px solid yellow;
   }
 
   .error-message {
