initial implementation of preferences submission deadline

--- a/frontend/src/app/core/components/admin/overview/overview.component.scss
+++ b/frontend/src/app/core/components/admin/overview/overview.component.scss
@@ -5,7 +5,7 @@
 }
 
 .overview-container {
-  height: auto;
+  height: 100%;
   @include flex-layout(
     $direction: column,
     $align: stretch,
