full faculty preferences management implementation

--- a/frontend/src/app/shared/dialog-action/dialog-action.component.html
+++ b/frontend/src/app/shared/dialog-action/dialog-action.component.html
@@ -66,6 +66,7 @@
           [(ngModel)]="submissionDeadline"
           (dateChange)="onDeadlineChange($event)"
           [disabled]="data.currentState"
+          readonly
           required
         />
         <mat-datepicker-toggle matIconSuffix [for]="picker">
