--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -148,21 +148,26 @@
         </ng-container>
 
         <!-- Toggle Column -->
+
+        <!-- Global Toggle -->
         <ng-container matColumnDef="toggle">
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             <mat-slide-toggle
               class="header-toggle"
               [checked]="isToggleAllChecked"
               [matTooltip]="getAllToggleTooltip(isToggleAllChecked)"
-              (change)="onToggleAllChange($event)"
+              (change)="onToggleAllPreferences($event)"
             >
             </mat-slide-toggle>
           </th>
+
+          <!-- Individual Toggle -->
           <td mat-cell *matCellDef="let element" class="custom-cell">
             <mat-slide-toggle
               [checked]="element.is_enabled"
+              [disabled]="isToggleAllChecked"
               [matTooltip]="getSingleToggleTooltip(element)"
-              (change)="onToggleSingleChange(element, $event)"
+              (change)="onToggleSinglePreferences(element, $event)"
             >
             </mat-slide-toggle>
           </td>
